syntax = "proto3";

import "graph.proto";
import "router.proto";

package transport_catalogue_proto;

message RouterSettings {
	uint32 bus_wait_time = 1;
	double bus_velocity = 2;
}

message StopVertex {
	uint32 wait = 1;
	uint32 bus = 2;
}

message StopToStopVertex {
	uint32 stop_name = 1;
	StopVertex stop_vertex = 2;
}

message Item {
	uint32 type = 1;
	uint32 name = 2;
	double time = 3;
	uint32 span_count = 4;
}

message EdgeIdToItem {
	uint32 edge_id = 1;
	Item item = 2;
}

message RouterData {
	RouterSettings router_settings = 1;
	DirectedWeightedGraph graph = 2;
	Router router = 3;
	repeated StopToStopVertex map_of_stop_to_stop_vertex = 4;
	repeated EdgeIdToItem map_of_edge_id_to_item = 5;
}